added script for new PR